@@ -2,6 +2,7 @@ Xfdesktop 4.x.y
 ---------------
 
   * Use Name field as display name of desktop files (bug #6896).
+  * Handle volume changes in a timeout (bug #7025).
 
 
 Xfdesktop 4.8.0
